--- a/src/main/webapp/WEB-INF/jsp/moban/default.css
+++ b/src/main/webapp/WEB-INF/jsp/moban/default.css
@@ -7479,8 +7479,17 @@ main li {
   padding-left: 10%;
   left: 0;
 }
+.from-order {
+  background: url(images/bjp.jpg) no-repeat;
+  -webkit-background-size: 100% 100%;
+  background-size: 100% 100%;
+  max-width: 100%;
+  margin-top: 20px;
+  text-align: left;
+  padding: 100px 0;
+}
 .from-self {
-  background: url(images/selfbg.jpg) no-repeat;
+  background: url(images/bjp.jpg) no-repeat;
   -webkit-background-size: 100% 100%;
   background-size: 100% 100%;
   max-width: 100%;
